[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebest"
version = "0.0.6"
authors = [
  { name="teranum", email="teranum@gmail.com" },
]
description = "package for ebest api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp",
]

[project.urls]
Homepage = "https://github.com/teranum/python-packages/tree/master/ebest"
Issues = "https://github.com/teranum/python-packages/issues"

