[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiwoomAsync"
version = "0.0.3"
authors = [
  { name="teranum", email="teranum@gmail.com" },
]
description = "package for async kiwoom api"
keywords = ["kiwoom"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyQt5",
  "qasync",
]

[project.urls]
Homepage = "https://github.com/teranum/python-packages/tree/master/kiwoomAsync"
Issues = "https://github.com/teranum/python-packages/issues"

